@@ -29,9 +29,9 @@ import static com.oracle.truffle.espresso.classfile.Constants.ACC_CALLER_SENSITI
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_ENUM;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_FINAL;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_FINALIZER;
+import static com.oracle.truffle.espresso.classfile.Constants.ACC_HIDDEN;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_INTERFACE;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_LAMBDA_FORM_COMPILED;
-import static com.oracle.truffle.espresso.classfile.Constants.ACC_LAMBDA_FORM_HIDDEN;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_MODULE;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_NATIVE;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_PRIVATE;
@@ -49,10 +49,13 @@ import static com.oracle.truffle.espresso.classfile.Constants.JVM_RECOGNIZED_MET
 
 import java.io.IOException;
 import java.lang.reflect.Modifier;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.Objects;
+import java.util.Set;
 
-import com.oracle.truffle.espresso.EspressoLanguage;
+import org.graalvm.collections.EconomicMap;
+
 import com.oracle.truffle.espresso.classfile.ConstantPool.Tag;
 import com.oracle.truffle.espresso.classfile.attributes.BootstrapMethodsAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.CodeAttribute;
@@ -66,6 +69,8 @@ import com.oracle.truffle.espresso.classfile.attributes.LocalVariableTable;
 import com.oracle.truffle.espresso.classfile.attributes.MethodParametersAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.NestHostAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.NestMembersAttribute;
+import com.oracle.truffle.espresso.classfile.attributes.PermittedSubclassesAttribute;
+import com.oracle.truffle.espresso.classfile.attributes.RecordAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.SignatureAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.SourceDebugExtensionAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.SourceFileAttribute;
@@ -78,6 +83,7 @@ import com.oracle.truffle.espresso.descriptors.Symbol.Name;
 import com.oracle.truffle.espresso.descriptors.Symbol.Signature;
 import com.oracle.truffle.espresso.descriptors.Symbol.Type;
 import com.oracle.truffle.espresso.descriptors.Types;
+import com.oracle.truffle.espresso.impl.ClassRegistry;
 import com.oracle.truffle.espresso.impl.ParserField;
 import com.oracle.truffle.espresso.impl.ParserKlass;
 import com.oracle.truffle.espresso.impl.ParserMethod;
@@ -92,7 +98,6 @@ import com.oracle.truffle.espresso.runtime.ClasspathFile;
 import com.oracle.truffle.espresso.runtime.EspressoContext;
 import com.oracle.truffle.espresso.runtime.EspressoException;
 import com.oracle.truffle.espresso.runtime.StaticObject;
-import com.oracle.truffle.espresso.substitutions.Host;
 
 @SuppressWarnings("try")
 public final class ClassfileParser {
@@ -147,16 +152,17 @@ public final class ClassfileParser {
     public static final char JAVA_MIN_SUPPORTED_VERSION = JAVA_1_1_VERSION;
     public static final char JAVA_MAX_SUPPORTED_VERSION = JAVA_11_VERSION;
     public static final char JAVA_MAX_SUPPORTED_MINOR_VERSION = 0;
+    public static final char JAVA_PREVIEW_MINOR_VERSION = 65535;
 
     private final ClasspathFile classfile;
 
-    private final String requestedClassType;
+    private final Symbol<Type> requestedClassType;
 
     private final EspressoContext context;
 
     private final ClassfileStream stream;
 
-    private final StaticObject[] constantPoolPatches;
+    private final ClassRegistry.ClassDefinitionInfo classDefinitionInfo;
 
     private Symbol<Type> classType;
 
@@ -171,18 +177,18 @@ public final class ClassfileParser {
 
     private ConstantPool pool;
 
-    private ClassfileParser(ClassfileStream stream, StaticObject loader, String requestedClassType, EspressoContext context, StaticObject[] constantPoolPatches) {
+    private ClassfileParser(ClassfileStream stream, StaticObject loader, Symbol<Type> requestedClassType, EspressoContext context, ClassRegistry.ClassDefinitionInfo info) {
         this.requestedClassType = requestedClassType;
         this.context = context;
         this.classfile = null;
         this.stream = Objects.requireNonNull(stream);
-        this.constantPoolPatches = constantPoolPatches;
         this.loader = loader;
+        this.classDefinitionInfo = info;
     }
 
     // Note: only used for reading the class name from class bytes
     private ClassfileParser(ClassfileStream stream, EspressoContext context) {
-        this(stream, null, "", context, null);
+        this(stream, null, null, context, ClassRegistry.ClassDefinitionInfo.EMPTY);
     }
 
     void handleBadConstant(Tag tag, ClassfileStream s) {
@@ -204,22 +210,22 @@ public final class ClassfileParser {
 
     void checkInvokeDynamicSupport(Tag tag) {
         if (majorVersion < INVOKEDYNAMIC_MAJOR_VERSION) {
-            stream.classFormatError("Class file version does not support constant tag %d", tag.getValue());
+            throw stream.classFormatError("Class file version does not support constant tag %d", tag.getValue());
         }
     }
 
     void checkDynamicConstantSupport(Tag tag) {
         if (majorVersion < DYNAMICCONSTANT_MAJOR_VERSION) {
-            stream.classFormatError("Class file version does not support constant tag %d", tag.getValue());
+            throw stream.classFormatError("Class file version does not support constant tag %d", tag.getValue());
         }
     }
 
-    public static ParserKlass parse(ClassfileStream stream, StaticObject loader, String requestedClassName, EspressoContext context) {
-        return parse(stream, loader, requestedClassName, context, null);
+    public static ParserKlass parse(ClassfileStream stream, StaticObject loader, Symbol<Type> requestedClassName, EspressoContext context) {
+        return parse(stream, loader, requestedClassName, context, ClassRegistry.ClassDefinitionInfo.EMPTY);
     }
 
-    public static ParserKlass parse(ClassfileStream stream, StaticObject loader, String requestedClassName, EspressoContext context, @Host(Object[].class) StaticObject[] constantPoolPatches) {
-        return new ClassfileParser(stream, loader, requestedClassName, context, constantPoolPatches).parseClass();
+    public static ParserKlass parse(ClassfileStream stream, StaticObject loader, Symbol<Type> requestedClassType, EspressoContext context, ClassRegistry.ClassDefinitionInfo info) {
+        return new ClassfileParser(stream, loader, requestedClassType, context, info).parseClass();
     }
 
     private ParserKlass parseClass() {
@@ -242,15 +248,17 @@ public final class ClassfileParser {
 
     /**
      * Verifies that the class file version is supported.
-     * 
+     *
      * @param major the major version number
      * @param minor the minor version number
      */
     private void verifyVersion(int major, int minor) {
         if (context.getJavaVersion().java8OrEarlier()) {
-            versionCheck8(context.getJavaVersion().classFileVersion(), major, minor);
+            versionCheck8OrEarlier(context.getJavaVersion().classFileVersion(), major, minor);
+        } else if (context.getJavaVersion().java11OrEarlier()) {
+            versionCheck11OrEarlier(context.getJavaVersion().classFileVersion(), major, minor);
         } else {
-            versionCheck11(context.getJavaVersion().classFileVersion(), major, minor);
+            versionCheck12OrLater(context.getJavaVersion().classFileVersion(), major, minor);
         }
     }
 
@@ -260,12 +268,14 @@ public final class ClassfileParser {
      * <li>Major_version >= 45 and major_version <= current_major_version, any minor version.
      * <li>Major_version = current_major_version and minor_version <= MAX_SUPPORTED_MINOR (= 0).
      */
-    private static void versionCheck8(int maxMajor, int major, int minor) {
-        if (major < JAVA_MIN_SUPPORTED_VERSION ||
-                        major > maxMajor ||
-                        (major == maxMajor && minor > JAVA_MAX_SUPPORTED_MINOR_VERSION)) {
-            throw unsupportedClassVersionError("Unsupported major.minor version " + major + "." + minor);
+    private static void versionCheck8OrEarlier(int maxMajor, int major, int minor) {
+        if (major == maxMajor && minor <= JAVA_MAX_SUPPORTED_MINOR_VERSION) {
+            return;
         }
+        if (major >= JAVA_MIN_SUPPORTED_VERSION && major < maxMajor) {
+            return;
+        }
+        throw unsupportedClassVersionError("Unsupported major.minor version " + major + "." + minor);
     }
 
     /**
@@ -276,17 +286,44 @@ public final class ClassfileParser {
      * <li>Major_version = current_major_version and minor_version = 65535 and --enable-preview is
      * present.
      */
-    private static void versionCheck11(int maxMajor, int major, int minor) {
-        if (major < JAVA_MIN_SUPPORTED_VERSION ||
-                        major > maxMajor ||
-                        major != JAVA_1_1_VERSION && minor != 0 ||
-                        (major == maxMajor) && (minor > JAVA_MAX_SUPPORTED_MINOR_VERSION)) {
-            throw unsupportedClassVersionError("Unsupported major.minor version " + major + "." + minor);
+    private static void versionCheck11OrEarlier(int maxMajor, int major, int minor) {
+        if (major == maxMajor && (minor <= JAVA_MAX_SUPPORTED_MINOR_VERSION || minor == JAVA_PREVIEW_MINOR_VERSION)) {
+            return;
         }
+        if (major < maxMajor && major > JAVA_MIN_SUPPORTED_VERSION && minor == 0) {
+            return;
+        }
+        if (major == JAVA_MIN_SUPPORTED_VERSION) {
+            return;
+        }
+        throw unsupportedClassVersionError("Unsupported major.minor version " + major + "." + minor);
+    }
+
+    /**
+     * Hotspot comment (17): A legal major_version.minor_version must be one of the following:
+     *
+     * <li>Major_version >= 45 and major_version < 56, any minor_version.
+     * <li>Major_version >= 56 and major_version <= JVM_CLASSFILE_MAJOR_VERSION and minor_version =
+     * 0.
+     * <li>Major_version = JVM_CLASSFILE_MAJOR_VERSION and minor_version = 65535 and
+     * --enable-preview is present.
+     *
+     */
+    private static void versionCheck12OrLater(int maxMajor, int major, int minor) {
+        if (major >= JAVA_12_VERSION && major <= maxMajor && minor == 0) {
+            return;
+        }
+        if (major >= JAVA_MIN_SUPPORTED_VERSION && major < JAVA_12_VERSION) {
+            return;
+        }
+        if (major == maxMajor && minor == JAVA_PREVIEW_MINOR_VERSION) {
+            return;
+        }
+        throw unsupportedClassVersionError("Unsupported major.minor version " + major + "." + minor);
     }
 
     private static EspressoException unsupportedClassVersionError(String message) {
-        Meta meta = EspressoLanguage.getCurrentContext().getMeta();
+        Meta meta = EspressoContext.get(null).getMeta();
         throw meta.throwExceptionWithMessage(meta.java_lang_UnsupportedClassVersionError, message);
     }
 
@@ -321,11 +358,7 @@ public final class ClassfileParser {
         verifyVersion(majorVersion, minorVersion);
 
         try (DebugCloseable closeable = CONSTANT_POOL.scope(context.getTimers())) {
-            if (constantPoolPatches == null) {
-                this.pool = ConstantPool.parse(context.getLanguage(), stream, this, majorVersion, minorVersion);
-            } else {
-                this.pool = ConstantPool.parse(context.getLanguage(), stream, this, constantPoolPatches, context, majorVersion, minorVersion);
-            }
+            this.pool = ConstantPool.parse(context.getLanguage(), stream, this, classDefinitionInfo.patches, context, majorVersion, minorVersion);
         }
 
         // JVM_ACC_MODULE is defined in JDK-9 and later.
@@ -372,7 +405,7 @@ public final class ClassfileParser {
         classType = thisKlassType;
 
         // Checks if name in class file matches requested name
-        if (requestedClassType != null && !requestedClassType.equals(classType.toString())) {
+        if (requestedClassType != null && !classDefinitionInfo.isHidden() && !requestedClassType.equals(classType)) {
             throw ConstantPool.noClassDefFoundError(classType + " (wrong name: " + requestedClassType + ")");
         }
 
@@ -406,7 +439,16 @@ public final class ClassfileParser {
         // Ensure there are no trailing bytes
         stream.checkEndOfFile();
 
-        return new ParserKlass(pool, classFlags, thisKlassName, thisKlassType, superKlass, superInterfaces, methods, fields, attributes, thisKlassIndex);
+        if (classDefinitionInfo.isHidden()) {
+            assert requestedClassType != null;
+            int futureKlassID = context.getNewKlassId();
+            classDefinitionInfo.initKlassID(futureKlassID);
+            thisKlassName = context.getNames().getOrCreate(Types.hiddenClassName(requestedClassType, futureKlassID));
+            thisKlassType = context.getTypes().fromName(thisKlassName);
+            pool = pool.patchForHiddenClass(thisKlassIndex, thisKlassName);
+        }
+
+        return new ParserKlass(pool, classDefinitionInfo.patchFlags(classFlags), thisKlassName, thisKlassType, superKlass, superInterfaces, methods, fields, attributes, thisKlassIndex);
     }
 
     public static Symbol<Symbol.Name> getClassName(byte[] bytes, EspressoContext context) {
@@ -422,11 +464,7 @@ public final class ClassfileParser {
         verifyVersion(majorVersion, minorVersion);
 
         try (DebugCloseable closeable = CONSTANT_POOL.scope(context.getTimers())) {
-            if (constantPoolPatches == null) {
-                this.pool = ConstantPool.parse(context.getLanguage(), stream, this, majorVersion, minorVersion);
-            } else {
-                this.pool = ConstantPool.parse(context.getLanguage(), stream, this, constantPoolPatches, context, majorVersion, minorVersion);
-            }
+            this.pool = ConstantPool.parse(context.getLanguage(), stream, this, classDefinitionInfo.patches, context, majorVersion, minorVersion);
         }
 
         // JVM_ACC_MODULE is defined in JDK-9 and later.
@@ -563,12 +601,15 @@ public final class ClassfileParser {
                     RUNTIME_VISIBLE_TYPE_ANNOTATIONS | RUNTIME_INVISIBLE_TYPE_ANNOTATIONS | ANNOTATION_DEFAULT | SIGNATURE;
     private static final int fieldAnnotations = RUNTIME_VISIBLE_ANNOTATIONS | RUNTIME_INVISIBLE_ANNOTATIONS | RUNTIME_VISIBLE_TYPE_ANNOTATIONS | RUNTIME_INVISIBLE_TYPE_ANNOTATIONS | SIGNATURE;
     private static final int codeAnnotations = RUNTIME_VISIBLE_TYPE_ANNOTATIONS | RUNTIME_INVISIBLE_TYPE_ANNOTATIONS | SIGNATURE;
+    private static final int recordAnnotations = RUNTIME_VISIBLE_ANNOTATIONS | RUNTIME_INVISIBLE_ANNOTATIONS |
+                    RUNTIME_VISIBLE_TYPE_ANNOTATIONS | RUNTIME_INVISIBLE_TYPE_ANNOTATIONS | SIGNATURE;
 
     public enum InfoType {
         Class(classAnnotations),
         Method(methodAnnotations),
         Field(fieldAnnotations),
-        Code(codeAnnotations);
+        Code(codeAnnotations),
+        Record(recordAnnotations);
 
         final int annotations;
 
@@ -637,6 +678,9 @@ public final class ClassfileParser {
             } else if (infoType.supports(SIGNATURE) && attributeName.equals(Name.Signature)) {
                 if (context.getJavaVersion().java9OrLater() && signature != null) {
                     throw ConstantPool.classFormatError("Duplicate AnnotationDefault attribute");
+                }
+                if (attributeSize != 2) {
+                    throw ConstantPool.classFormatError("Invalid attribute_length value for signature attribute: " + attributeSize + " != 2");
                 }
                 return signature = parseSignatureAttribute(attributeName);
             }
@@ -775,8 +819,9 @@ public final class ClassfileParser {
                         Symbol<Type> annotType = constant.value();
                         if (Type.java_lang_invoke_LambdaForm$Compiled.equals(annotType)) {
                             methodFlags |= ACC_LAMBDA_FORM_COMPILED;
-                        } else if (Type.java_lang_invoke_LambdaForm$Hidden.equals(annotType)) {
-                            methodFlags |= ACC_LAMBDA_FORM_HIDDEN;
+                        } else if (Type.java_lang_invoke_LambdaForm$Hidden.equals(annotType) ||
+                                        Type.jdk_internal_vm_annotation_Hidden.equals(annotType)) {
+                            methodFlags |= ACC_HIDDEN;
                         } else if (Type.sun_reflect_CallerSensitive.equals(annotType) ||
                                         Type.jdk_internal_reflect_CallerSensitive.equals(annotType)) {
                             methodFlags |= ACC_CALLER_SENSITIVE;
@@ -814,6 +859,10 @@ public final class ClassfileParser {
             if (codeAttribute == null) {
                 throw ConstantPool.classFormatError("Missing Code attribute");
             }
+        }
+
+        if (classDefinitionInfo.isHidden()) {
+            methodFlags |= ACC_HIDDEN;
         }
 
         return ParserMethod.create(methodFlags, name, signature, methodAttributes);
@@ -885,6 +934,8 @@ public final class ClassfileParser {
         EnclosingMethodAttribute enclosingMethod = null;
         BootstrapMethodsAttribute bootstrapMethods = null;
         InnerClassesAttribute innerClasses = null;
+        PermittedSubclassesAttribute permittedSubclasses = null;
+        RecordAttribute record = null;
 
         CommonAttributeParser commonAttributeParser = new CommonAttributeParser(InfoType.Class);
 
@@ -942,6 +993,16 @@ public final class ClassfileParser {
                         throw ConstantPool.classFormatError("Classfile cannot have both a nest members and a nest host attribute.");
                     }
                     classAttributes[i] = nestMembers = parseNestMembers(attributeName);
+                } else if (majorVersion >= JAVA_14_VERSION && attributeName.equals(Name.Record)) {
+                    if (record != null) {
+                        throw ConstantPool.classFormatError("Duplicate Record attribute");
+                    }
+                    classAttributes[i] = record = parseRecord(attributeName);
+                } else if (majorVersion >= JAVA_17_VERSION && attributeName.equals(Name.PermittedSubclasses)) {
+                    if (permittedSubclasses != null) {
+                        throw ConstantPool.classFormatError("Duplicate PermittedSubclasses attribute");
+                    }
+                    classAttributes[i] = permittedSubclasses = parsePermittedSubclasses(attributeName);
                 } else {
                     Attribute attr = commonAttributeParser.parseCommonAttribute(attributeName, attributeSize);
                     // stream.skip(attributeSize);
@@ -1001,20 +1062,21 @@ public final class ClassfileParser {
         return new LineNumberTableAttribute(name, entries);
     }
 
-    private LocalVariableTable parseLocalVariableAttribute(Symbol<Name> name) {
+    private LocalVariableTable parseLocalVariableAttribute(Symbol<Name> name, int codeLength, int maxLocals) {
         assert Name.LocalVariableTable.equals(name);
-        return parseLocalVariableTable(name);
+        return parseLocalVariableTable(name, codeLength, maxLocals);
     }
 
-    private LocalVariableTable parseLocalVariableTypeAttribute(Symbol<Name> name) {
+    private LocalVariableTable parseLocalVariableTypeAttribute(Symbol<Name> name, int codeLength, int maxLocals) {
         assert Name.LocalVariableTypeTable.equals(name);
-        return parseLocalVariableTable(name);
+        return parseLocalVariableTable(name, codeLength, maxLocals);
     }
 
-    private LocalVariableTable parseLocalVariableTable(Symbol<Name> name) {
+    private LocalVariableTable parseLocalVariableTable(Symbol<Name> name, int codeLength, int maxLocals) {
+        boolean isLVTT = Name.LocalVariableTypeTable.equals(name);
         int entryCount = stream.readU2();
         if (entryCount == 0) {
-            return LocalVariableTable.EMPTY;
+            return isLVTT ? LocalVariableTable.EMPTY_LVTT : LocalVariableTable.EMPTY_LVT;
         }
         Local[] locals = new Local[entryCount];
         for (int i = 0; i < entryCount; i++) {
@@ -1024,8 +1086,32 @@ public final class ClassfileParser {
             int descIndex = stream.readU2();
             int slot = stream.readU2();
 
+            if (bci < 0 || bci >= codeLength) {
+                throw ConstantPool.classFormatError("Invalid local variable table attribute entry: start_pc out of bounds: " + bci);
+            }
+            if (bci + length > codeLength) {
+                throw ConstantPool.classFormatError("Invalid local variable table attribute entry: start_pc + length out of bounds: " + (bci + length));
+            }
+
             Utf8Constant poolName = pool.utf8At(nameIndex);
             Utf8Constant typeName = pool.utf8At(descIndex);
+
+            typeName.validateUTF8();
+            poolName.validateFieldName();
+
+            int extraSlot = 0;
+            if (!isLVTT) {
+                typeName.validateType(false);
+                Symbol<Type> type = typeName.value();
+                if (type == Type._long || type == Type._double) {
+                    extraSlot = 1;
+                }
+            }
+
+            if (slot + extraSlot >= maxLocals) {
+                throw ConstantPool.classFormatError("Invalid local variable table attribute entry: index points to an invalid frame slot: " + slot);
+            }
+
             locals[i] = new Local(poolName, typeName, bci, bci + length, slot);
 
         }
@@ -1035,6 +1121,7 @@ public final class ClassfileParser {
     private SignatureAttribute parseSignatureAttribute(Symbol<Name> name) {
         assert Name.Signature.equals(name);
         int signatureIndex = stream.readU2();
+        pool.utf8At(signatureIndex).validateUTF8();
         return new SignatureAttribute(name, signatureIndex);
     }
 
@@ -1239,6 +1326,52 @@ public final class ClassfileParser {
         return new NestMembersAttribute(attributeName, classes);
     }
 
+    private PermittedSubclassesAttribute parsePermittedSubclasses(Symbol<Name> attributeName) {
+        assert PermittedSubclassesAttribute.NAME.equals(attributeName);
+        if ((classFlags & ACC_FINAL) != 0) {
+            throw ConstantPool.classFormatError("A final class may not declare a permitted subclasses attribute.");
+        }
+        int numberOfClasses = stream.readU2();
+        if (numberOfClasses == 0) {
+            return PermittedSubclassesAttribute.EMPTY;
+        }
+        char[] classes = new char[numberOfClasses];
+        for (int i = 0; i < numberOfClasses; i++) {
+            int pos = stream.readU2();
+            pool.classAt(pos).validate(pool);
+            classes[i] = (char) pos;
+        }
+        return new PermittedSubclassesAttribute(attributeName, classes);
+    }
+
+    private RecordAttribute parseRecord(Symbol<Name> recordAttributeName) {
+        assert RecordAttribute.NAME.equals(recordAttributeName);
+        int count = stream.readU2();
+        RecordAttribute.RecordComponentInfo[] components = new RecordAttribute.RecordComponentInfo[count];
+        for (int i = 0; i < count; i++) {
+            final int name = stream.readU2();
+            final int descriptor = stream.readU2();
+            pool.utf8At(name).validateUTF8();
+            pool.utf8At(descriptor).validateType(false);
+            Attribute[] componentAttributes = parseRecordComponentAttributes();
+            components[i] = new RecordAttribute.RecordComponentInfo(name, descriptor, componentAttributes);
+        }
+        return new RecordAttribute(recordAttributeName, components);
+    }
+
+    private Attribute[] parseRecordComponentAttributes() {
+        final int size = stream.readU2();
+        Attribute[] componentAttributes = new Attribute[size];
+        CommonAttributeParser commonAttributeParser = new CommonAttributeParser(InfoType.Record);
+        for (int j = 0; j < size; j++) {
+            final Symbol<Name> attributeName = pool.symbolAt(stream.readU2(), "attribute name");
+            final int attributeSize = stream.readS4();
+            Attribute attr = commonAttributeParser.parseCommonAttribute(attributeName, attributeSize);
+            componentAttributes[j] = attr == null ? new Attribute(attributeName, stream.readByteArray(attributeSize)) : attr;
+        }
+        return componentAttributes;
+    }
+
     private InnerClassesAttribute.Entry parseInnerClassEntry() {
         int innerClassIndex = stream.readU2();
         int outerClassIndex = stream.readU2();
@@ -1292,6 +1425,7 @@ public final class ClassfileParser {
 
         int attributeCount = stream.readU2();
         final Attribute[] codeAttributes = spawnAttributesArray(attributeCount);
+        int totalLocalTableCount = 0;
 
         CommonAttributeParser commonAttributeParser = new CommonAttributeParser(InfoType.Code);
 
@@ -1307,9 +1441,10 @@ public final class ClassfileParser {
             if (attributeName.equals(Name.LineNumberTable)) {
                 codeAttributes[i] = parseLineNumberTable(attributeName);
             } else if (attributeName.equals(Name.LocalVariableTable)) {
-                codeAttributes[i] = parseLocalVariableAttribute(attributeName);
+                codeAttributes[i] = parseLocalVariableAttribute(attributeName, codeLength, maxLocals);
+                totalLocalTableCount++;
             } else if (attributeName.equals(Name.LocalVariableTypeTable)) {
-                codeAttributes[i] = parseLocalVariableTypeAttribute(attributeName);
+                codeAttributes[i] = parseLocalVariableTypeAttribute(attributeName, codeLength, maxLocals);
             } else if (attributeName.equals(Name.StackMapTable)) {
                 if (stackMapTable != null) {
                     throw ConstantPool.classFormatError("Duplicate StackMapTable attribute");
@@ -1326,7 +1461,42 @@ public final class ClassfileParser {
             }
         }
 
+        if (totalLocalTableCount > 0) {
+            validateLocalTables(codeAttributes);
+        }
+
         return new CodeAttribute(name, maxStack, maxLocals, code, entries, codeAttributes, majorVersion);
+    }
+
+    private void validateLocalTables(Attribute[] codeAttributes) {
+        if (getMajorVersion() < JAVA_1_5_VERSION) {
+            return;
+        }
+        EconomicMap<Local, Boolean> table = EconomicMap.create(Local.localEquivalence);
+        ArrayList<LocalVariableTable> typeTables = new ArrayList<>();
+        for (Attribute attr : codeAttributes) {
+            if (attr.getName() == Name.LocalVariableTable) {
+                LocalVariableTable localTable = (LocalVariableTable) attr;
+                for (Local local : localTable.getLocals()) {
+                    if (table.put(local, false) != null) {
+                        throw ConstantPool.classFormatError("Duplicate local in local variable table: " + local);
+                    }
+                }
+            } else if (attr.getName() == Name.LocalVariableTypeTable) {
+                typeTables.add((LocalVariableTable) attr);
+            }
+        }
+        for (LocalVariableTable typeTable : typeTables) {
+            for (Local local : typeTable.getLocals()) {
+                Boolean present = table.put(local, true);
+                if (present == null) {
+                    throw ConstantPool.classFormatError("Local in local variable type table does not match any local variable table entry: " + local);
+                }
+                if (present) {
+                    throw ConstantPool.classFormatError("Duplicate local in local variable type table: " + local);
+                }
+            }
+        }
     }
 
     private ExceptionHandler[] parseExceptionHandlerEntries() {
@@ -1530,6 +1700,13 @@ public final class ClassfileParser {
                 throw ConstantPool.classFormatError(classType + " superinterfaces cannot contain arrays nor primitives");
             }
             interfaces[i] = interfaceType;
+        }
+        // Check for duplicate interfaces in the interface array.
+        Set<Symbol<Type>> present = new HashSet<>(interfaces.length);
+        for (Symbol<Type> t : interfaces) {
+            if (!present.add(t)) {
+                throw ConstantPool.classFormatError("Duplicate interface name in classfile: " + t);
+            }
         }
         return interfaces;
     }
